--- a/notify/src/screens/style.css
+++ b/notify/src/screens/style.css
@@ -1,3 +1,14 @@
+input:-webkit-autofill {
+  color: #2a2a2a !important;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+transition: background-color 50000s ease-in-out 0s, color 5000s ease-in-out 0s;
+}
+
+/* ScroolBar */
 ::-webkit-scrollbar {
   width: 6px;
 
@@ -46,15 +57,15 @@
 }
 .container main {
   width: 100%;
-  max-width: 1400px;
+  max-width: 1200px;
   height: 100%;
-  display: flex;
   padding: 40px;
   display: grid;
+  grid-template-columns: 1fr 2fr;
   grid-template-areas:"Form List" ;
   grid-gap:10px;
-  /* align-items: flex-end; */
 }
+
 .container main .monitSelect {
   grid-area:Form;
   /* width: 380px; */
@@ -66,7 +77,6 @@
 .container main .monitSelect form fieldset {
   display: flex;
   flex-direction: column;
-  /* height: ; */
   width: 100%;
   background-color: #f5f5f5;
   border: solid 2px #ebebeb;
@@ -79,6 +89,7 @@
     color: rgb(59, 59, 59);
     font-weight: 700;
 }
+
 .input-group {
   display: flex;
   justify-content: space-between;
@@ -101,19 +112,10 @@
 .input-group #ValueInput{
   width: 90px;
 }
-input:-webkit-autofill {
-  color: #2a2a2a !important;
-}
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-transition: background-color 50000s ease-in-out 0s, color 5000s ease-in-out 0s;
-}
+
 /* CARDS SENSORS */
 .mySchedule {
   grid-area:List;
-  /* height: 420px; */
   height: 100%;
   overflow-y: auto;
 
@@ -264,4 +266,51 @@ transition: background-color 50000s ease-in-out 0s, color 5000s ease-in-out 0s;
 
 .form-Edit{
   background-color:rgb(255, 255, 255);
+}
+
+
+@media (max-width:780px){
+  .container main {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr;
+    grid-template-areas:
+    'Form'
+    'List' 
+    ;
+    grid-gap:10px;
+    /* overflow-y: auto; */
+    overflow-x: hidden;
+    height: 100%;
+    padding:0;
+    margin:0;
+  }
+  .container main .monitSelect{
+    /* height: 200px; */
+  }
+  .mySchedule{
+    height: 100%;
+    overflow-y: auto;
+  }
+  
+}
+@media (max-width:520px){
+
+  .container main .monitSelect{
+    /* height: 400px; */
+  }
+  .mySchedule{
+    height: 100%;
+    overflow: hidden;
+  }
+  .head-card h1{
+    font-size: 18px;
+  }
+  .mySchedule .content-card p{
+    font-size: 12px;
+  }
+  .mySchedule #footer-Container p{
+    font-size: 8px;
+
+  }
 }
