--- a/notify/src/screens/style.css
+++ b/notify/src/screens/style.css
@@ -1,3 +1,9 @@
+:root{
+  --button-edit-form: #2497a8;
+  --button-delete-form: #d31b2d;
+  --submit-button-form:#58c02e;
+
+}
 input:-webkit-autofill {
   color: #2a2a2a !important;
 }
@@ -5,29 +11,28 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-transition: background-color 50000s ease-in-out 0s, color 5000s ease-in-out 0s;
+  transition: background-color 50000s ease-in-out 0s, color 5000s ease-in-out 0s;
 }
 
 /* ScroolBar */
 ::-webkit-scrollbar {
   width: 6px;
-
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #dbdbdb; 
+  background: #dbdbdb;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(104, 102, 102); 
+  background: rgb(104, 102, 102);
   margin: 50px 0;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(114, 216, 83); 
+  background: var(--submit-button-form);
 }
 .container {
   width: 100%;
@@ -57,17 +62,17 @@ transition: background-color 50000s ease-in-out 0s, color 5000s ease-in-out 0s;
 }
 .container main {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1280px;
   height: 100%;
   padding: 40px;
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-areas:"Form List" ;
-  grid-gap:10px;
+  grid-template-columns: 3fr 3fr;
+  grid-template-areas: "Form List";
+  grid-gap: 10px;
 }
 
 .container main .monitSelect {
-  grid-area:Form;
+  grid-area: Form;
   /* width: 380px; */
 }
 .container main .monitSelect form {
@@ -84,10 +89,10 @@ transition: background-color 50000s ease-in-out 0s, color 5000s ease-in-out 0s;
 
   padding: 20px;
 }
-.container main .monitSelect form label{
-    font-size: 26px;
-    color: rgb(59, 59, 59);
-    font-weight: 700;
+.container main .monitSelect form label {
+  font-size: 26px;
+  color: rgb(59, 59, 59);
+  font-weight: 700;
 }
 
 .input-group {
@@ -99,59 +104,52 @@ transition: background-color 50000s ease-in-out 0s, color 5000s ease-in-out 0s;
   font-weight: 500;
 }
 .input-group select {
-  width: 90px;
-}
-.input-group input{
-  padding: 0 8px;
-}
-.input-group input,select{
-  border: solid 2px rgb(231, 231, 231);
-  border-radius: 5px;
   
 }
-.input-group #ValueInput{
-  width: 90px;
+.input-group input {
+  padding: 0 8px;
+}
+.input-group input,
+select {
+  border: solid 2px rgb(231, 231, 231);
+  border-radius: 5px;
+  width: 210px;
+}
+.input-group #ValueInput {
+  width: 210px;
 }
 
 /* CARDS SENSORS */
 .mySchedule {
-  grid-area:List;
+  grid-area: List;
   height: 100%;
   overflow-y: auto;
-
 }
 
-.mySchedule> div{
-  
+.mySchedule > div {
   margin-bottom: 10px;
   text-align: left;
-  
 
   display: flex;
   align-items: flex-end;
-
-  
 }
-.mySchedule> div svg{
+.mySchedule > div svg {
   margin: 0;
   padding: 0;
   margin-bottom: 6px;
 }
-.mySchedule> div p{
+.mySchedule > div p {
   font-size: 40px;
   font-weight: 700;
   color: rgb(255, 255, 255);
   margin: 0;
   padding: 0;
-  /* vertical-align: bottom; */
-  
+
 }
 .mySchedule ul {
   list-style: none;
-  /* max-height: 810px; */
+  overflow-y: auto;
   height: 100%;
-  
-  
 }
 .mySchedule ul li {
   border-radius: 8px;
@@ -161,156 +159,193 @@ transition: background-color 50000s ease-in-out 0s, color 5000s ease-in-out 0s;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   margin-bottom: 10px;
 }
-.mySchedule ul li button{
-    border: none;
-    /* padding: 8px; */
-    border-radius: 20%;
-    width: 30px;
-    height: 30px;
+.mySchedule ul li button {
+  border: none;
+  /* padding: 8px; */
+  border-radius: 20%;
+  width: 30px;
+  height: 30px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.mySchedule ul li button svg{
-    width: 14px;
-    height: 14px;
+.mySchedule ul li button svg {
+  width: 14px;
+  height: 14px;
 }
-.mySchedule #not-found{
-  color:white;
-  
+.mySchedule #not-found {
+  color: white;
 }
-#footer-Container{
-    display: flex;
-    align-items: flex-end;
+#footer-Container {
+  display: flex;
+  align-items: flex-end;
 }
-#buttons-Container{
-    width: 100%;
-    margin-top: 10px;
-    display: flex;
-    justify-content: flex-end;
+#buttons-Container {
+  width: 100%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-end;
 }
- .edit-button{
-    background-color: #17a2b8;
+.edit-button {
+  background-color: var(--button-edit-form);
 }
- .delete-button{
-    background-color: #dc3545;
-    margin-left: 8px;
+.delete-button {
+  background-color:var(--button-delete-form);
+  margin-left: 8px;
 }
-.head-card h1{
+.head-card h1 {
   color: rgb(59, 59, 59);
-    font-weight: 900;
+  font-weight: 900;
 }
-.head-card hr{
+.head-card hr {
   color: #17a2b8;
 }
-.head-card h5{
-    color: rgb(231, 80, 80);
-    font-weight: 700;
-    font-style: oblique;
-    font-size: 16px;
+.head-card h5 {
+  color: rgb(231, 80, 80);
+  font-weight: 700;
+  font-style: oblique;
+  font-size: 16px;
 }
 .content-card {
-    margin-top: 10px;
+  margin-top: 10px;
 }
-.content-card p{
-    line-height: 1rem;
-    font-size: 16px;
-    font-weight: 500;
-    color: rgb(59, 59, 59);
+.content-card p {
+  line-height: 1rem;
+  font-size: 16px;
+  font-weight: 500;
+  color: rgb(59, 59, 59);
 }
-.date-detail{
-    width: 300px;
-    font-weight: 500;
-    font-size: 13px;
-    color: rgb(102, 101, 101);
+.date-detail {
+  width: 300px;
+  font-weight: 500;
+  font-size: 13px;
+  color: rgb(102, 101, 101);
 }
 
-.buttons-container{
+.buttons-container {
   display: flex;
   flex-direction: column;
   margin-top: 10px;
-  
 }
-.buttons-container button{
+.buttons-container button {
   width: 100%;
   height: 40px;
   border: none;
   border-radius: 5px;
-
 }
-.buttons-container button+button{
+.buttons-container button + button {
   margin-top: 10px;
 }
-.buttons-container button[type=submit]{
-  background-color: rgb(52, 202, 97);
+.buttons-container button[type="submit"] {
+  background-color:var(--submit-button-form);
   color: rgb(250, 250, 250);
   font-weight: 500;
   font-size: 16px;
-
 }
-.buttons-container button[type=button]{
+.buttons-container button[type="button"] {
   background-color: rgb(233, 232, 232);
   font-weight: 500;
   font-size: 16px;
   border: solid 2px rgb(228, 228, 228);
 }
 
-#titleForm{
+#titleForm {
   font-size: 40px;
   font-weight: 700;
   color: rgb(59, 59, 59);
-
 }
 
-.form-Edit{
-  background-color:rgb(255, 255, 255);
+.form-Edit {
+  background-color: rgb(255, 255, 255);
 }
 
-
-@media (max-width:780px){
+@media (max-width: 768px) {
   .container main {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr;
-    grid-template-areas:
-    'Form'
-    'List' 
-    ;
-    grid-gap:10px;
-    /* overflow-y: auto; */
-    overflow-x: hidden;
-    height: 100%;
-    padding:0;
-    margin:0;
-  }
-  .container main .monitSelect{
-    /* height: 200px; */
-  }
-  .mySchedule{
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     overflow-y: auto;
+    padding: 0;
+    margin: 0;
+    /* width: 100vh; */
   }
-  
-}
-@media (max-width:520px){
 
-  .container main .monitSelect{
-    /* height: 400px; */
-  }
-  .mySchedule{
+  .container main .monitSelect {
     height: 100%;
-    overflow: hidden;
+    width: 100%;
+    /* overflow: hidden; */
   }
-  .head-card h1{
+  .container main .monitSelect form {
+    width: 100%;
+    height: 100%;
+    /* overflow-y: auto; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container main fieldset {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: auto;
+;
+  }
+  .container main fieldset #titleForm {
+    font-size: 21px;
+    font-weight: 800;
+    text-align: center;
+  }
+
+  .mySchedule {
+    height: 100%;
+    overflow-y: hidden;
+  }
+  .head-card h1 {
     font-size: 18px;
   }
-  .mySchedule .content-card p{
+  .mySchedule .content-card p {
     font-size: 12px;
   }
-  .mySchedule #footer-Container p{
-    font-size: 8px;
+  .mySchedule #footer-Container p {
+    font-size: 10px;
+  }
+  .container main .monitSelect form label {
+    font-size: 18px;
+    color: rgb(59, 59, 59);
+    font-weight: 700;
+  }
 
+  .input-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
+  .input-group label {
+    font-weight: 500;
+    font-size: 12px;
+  }
+  .input-group select {
+    width: 100%;
+  }
+  .input-group input {
+    padding: 0 8px;
+  }
+  .mySchedule ul {
+    list-style: none;
+    overflow-y: unset;
+    height: 100%;
+  }
+  .input-group input,
+  select {
+    border: solid 2px rgb(231, 231, 231);
+    border-radius: 5px;
+    width: 100%;
+    height: 32px;
+  }
+  .input-group #ValueInput {
+    width: 100%;
   }
 }
