--- a/notify/src/Global.css
+++ b/notify/src/Global.css
@@ -14,19 +14,16 @@ body {
   background: #383838;
   
 }
-@media (max-width: 768px) {
-  html {
-    height: 100vh;
-    width: 100vw;
-  }
-}
+
 body,
 input,
 button {
   font: 14px sans-serif;
   font-family: "Roboto", sans-serif;
 }
+
 #root {
+
   width: 100%;
   height: 100%;
 }
@@ -35,4 +32,5 @@ button {
 }
 body {
   -webkit-font-smoothing: antialiased;
+  /* height: 1220px; */
 }
