--- a/notify/src/screens/style.css
+++ b/notify/src/screens/style.css
@@ -41,6 +41,7 @@ input:-webkit-autofill:active {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-y: auto;
 }
 .container aside {
   width: 250px;
@@ -63,7 +64,6 @@ input:-webkit-autofill:active {
 .container main {
   width: 100%;
   max-width: 1280px;
-  height: 100%;
   padding: 40px;
   display: grid;
   grid-template-columns: 3fr 3fr;
@@ -77,7 +77,7 @@ input:-webkit-autofill:active {
 }
 .container main .monitSelect form {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 .container main .monitSelect form fieldset {
   display: flex;
@@ -260,33 +260,56 @@ select {
 .form-Edit {
   background-color: rgb(255, 255, 255);
 }
+@media (min-width: 768px) {
+  .mySchedule{
+    height: 460px;
+  }
+  .container{
+    overflow:hidden;
+  }
 
+}
+@media (min-width: 768px ) and (max-width:1014px){
+  .container main .monitSelect form label {
+    font-size: 18px;
+    color: rgb(59, 59, 59);
+    font-weight: 700;
+  }
+}
 @media (max-width: 768px) {
+  .container{
+    position: relative;
+    overflow-y: auto;
+    /* max-height: 350px; */
+
+  }
   .container main {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    overflow-y: auto;
     padding: 0;
     margin: 0;
+    top: 0;
+    left: 0;
+    position:absolute;
+    /* height: 100%; */
+
     /* width: 100vh; */
   }
 
   .container main .monitSelect {
-    height: 100%;
     width: 100%;
     /* overflow: hidden; */
   }
   .container main .monitSelect form {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     /* overflow-y: auto; */
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .container main fieldset {
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     padding: 0;
     margin: 0;
@@ -300,8 +323,8 @@ select {
   }
 
   .mySchedule {
-    height: 100%;
-    overflow-y: hidden;
+    /* height: 100%; */
+    /* overflow-y: hidden; */
   }
   .head-card h1 {
     font-size: 18px;
@@ -313,7 +336,7 @@ select {
     font-size: 10px;
   }
   .container main .monitSelect form label {
-    font-size: 18px;
+    font-size: 16px;
     color: rgb(59, 59, 59);
     font-weight: 700;
   }
@@ -335,8 +358,8 @@ select {
   }
   .mySchedule ul {
     list-style: none;
-    overflow-y: unset;
-    height: 100%;
+    /* overflow-y: unset; */
+    /* height: 100%; */
   }
   .input-group input,
   select {
