--- a/notify/src/Global.css
+++ b/notify/src/Global.css
@@ -3,6 +3,7 @@
   padding: 0;
   outline: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 html {
   height: 100vh;
@@ -11,7 +12,7 @@ html {
 body {
   height: 100%;
   width: 100%;
-  background: #cacaca;
+  background: #ece9e9;
   
 }
 
