--- a/notify/src/screens/style.css
+++ b/notify/src/screens/style.css
@@ -46,7 +46,7 @@ input:-webkit-autofill:active {
 }
 .container aside {
   width: 250px;
-
+  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -180,7 +180,7 @@ select {
   height: 14px;
 }
 .mySchedule #not-found {
-  color: white;
+  color: rgb(59, 59, 59);
 }
 #footer-Container {
   display: flex;
@@ -271,6 +271,12 @@ select {
   }
   .container{
     overflow:hidden;
+  }
+  .container main {
+    height: 100%;
+  }
+  .container main .mySchedule{
+    height: 100%;
   }
 
 }
