--- a/notify/src/Global.css
+++ b/notify/src/Global.css
@@ -4,11 +4,14 @@
   outline: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
 }
 html {
   height: 100vh;
   width: 100vw;
+ 
 }
+
 body {
   height: 100%;
   width: 100%;
