--- a/notify/src/screens/style.css
+++ b/notify/src/screens/style.css
@@ -17,7 +17,7 @@ input:-webkit-autofill:active {
 
 /* ScroolBar */
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 4px;
 }
 
 /* Track */
@@ -68,6 +68,7 @@ input:-webkit-autofill:active {
   padding: 40px;
   display: grid;
   grid-template-columns: 3fr 3fr;
+  /* grid-template-rows: 2fr 2fr; */
   grid-template-areas: "Form List";
   grid-gap: 10px;
 }
@@ -122,7 +123,42 @@ select {
 .input-group #ValueInput {
   width: 210px;
 }
+/* search  */
+.search-input-container{
 
+  margin:0 0 10px 0;
+  width: 100%;
+  display: flex;
+
+  position: sticky;
+  top: 0;
+  
+}
+.search-input-container input{
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  border: none;
+  height: 2rem;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  padding: 8px;
+  width: 90%;
+}
+.search-input-container p {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  height: 2rem;
+  border: none;
+  background-color: var(--submit-button-form);
+  color: #ffffff;
+  width: 2rem;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  width: 10%;
+  /* height: 6px; */
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* CARDS SENSORS */
 .mySchedule {
   grid-area: List;
@@ -163,7 +199,7 @@ select {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   margin-bottom: 10px;
 }
-.mySchedule ul li button {
+.mySchedule ul li button,a {
   border: none;
   /* padding: 8px; */
   border-radius: 20%;
@@ -180,7 +216,7 @@ select {
   height: 14px;
 }
 .mySchedule #not-found {
-  color: white;
+  color: rgb(131, 129, 129);
 }
 #footer-Container {
   display: flex;
@@ -267,21 +303,21 @@ select {
 }
 @media (min-width: 768px) {
   .mySchedule{
-    height: 460px;
+    height: 584px;
   }
   .container{
     overflow:hidden;
   }
 
 }
-@media (min-width: 768px ) and (max-width:1014px){
+@media (min-width: 1024px ) and (max-width:1014px){
   .container main .monitSelect form label {
     font-size: 18px;
     color: rgb(59, 59, 59);
     font-weight: 700;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .container{
     position: relative;
     overflow-y: auto;
