--- a/notify/src/Global.css
+++ b/notify/src/Global.css
@@ -25,12 +25,12 @@ button {
   font: 14px sans-serif;
   font-family: "Roboto", sans-serif;
 }
-
+/* 
 #root {
 
   width: 100%;
   height: 100%;
-}
+} */
 button {
   cursor: pointer;
 }
