--- a/notify/src/screens/style.css
+++ b/notify/src/screens/style.css
@@ -1,7 +1,7 @@
 :root{
   --button-edit-form: #2497a8;
   --button-delete-form: #d31b2d;
-  --submit-button-form:#58c02e;
+  --submit-button-form:#7AB648;
   --background-form: #ffffff;
 
 }
@@ -88,9 +88,11 @@ input:-webkit-autofill:active {
   width: 100%;
   background-color: var(--background-form);
   border: none;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); */
   /* border: solid 2px #e4e3e3; */
-  border-radius: 10px;
+  border: solid 2px rgb(231, 231, 231);
+  border-radius: 5px;
+  /* border-radius: 10px; */
 
   padding: 20px;
 }
@@ -136,23 +138,27 @@ select {
   
 }
 .search-input-container input{
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  border: none;
+  /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); */
+  /* border: none; */
+  border: solid 2px rgb(231, 231, 231);
+  /* border-radius: 5px; */
   height: 2rem;
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
   padding: 8px;
   width: 90%;
 }
 .search-input-container p {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  /* box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); */
   height: 2rem;
+  border: solid 2px rgb(231, 231, 231);
+  /* border-radius: 5px; */
   border: none;
   background-color: var(--submit-button-form);
   color: #ffffff;
   width: 2rem;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
   width: 10%;
   /* height: 6px; */
 
@@ -195,9 +201,11 @@ select {
 .mySchedule ul li {
   border-radius: 8px;
   background-color: var(--background-form);
-  border: none;
+  /* border: none; */
   padding: 10px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  border: solid 2px rgb(231, 231, 231);
+  border-radius: 5px;
+  /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); */
   margin-bottom: 10px;
 }
 .mySchedule ul li button,a {
