--- a/backNotify/src/modules/notifications/Views/emails/sensorAlert.hbs
+++ b/backNotify/src/modules/notifications/Views/emails/sensorAlert.hbs
@@ -77,8 +77,8 @@
     <div class="Container-Mail">
       <div class="Container-Content">
         <h1>SENSOR {{cond}} DE {{value}}{{unit}}</h1>
-        <p>Valor do sensor: {{VALUE_JSON}}{{unit}}</p>
-        <p>O sensor <b>{{sensorName}}</b> está {{cond}} de {{value}}{{unit}} - {{medition_type}}</p>
+        <p>Valor do sensor: {{value_json}}{{unit}}</p>
+        <p>O sensor <b>{{file_name}}</b> está {{condition}} de {{value}}{{unit}} - {{medition_type}}</p>
         <br />
         <table>
           <tr>
